Support the just identity query